--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -26,7 +26,13 @@
 }
 nav{
 	z-index: 1000;
+	border-top: solid 1px $white;
+	border-bottom: solid 1px $white;
+	padding: 5px 0;
+	overflow-y: hidden;
 	@media #{$tablet}{
+		border-top: none;
+		border-bottom: none;
 		background: none;
 		padding: 0 0;
 	}
