--- a/app/assets/stylesheets/_layout.scss
+++ b/app/assets/stylesheets/_layout.scss
@@ -18,15 +18,22 @@ nav{
 	position: fixed;
 }
 
-main, .main{
-	padding-left: 1rem;
-	padding-right: 1rem;
+.main{
+	padding-left: $margin-horizontal-normal;
+	padding-right: $margin-horizontal-normal;
 }
 
-main{
+main, .main{
 	@media #{$tablet}{
 		padding-left: 0;
 		padding-right: 0;
+	}
+}
+
+.full-content{
+	padding: 0 $margin-horizontal-normal;
+	&.no-padding{
+		padding: 0;
 	}
 }
 @media #{$tablet}{
